# CYIVideojsTester

./: .gitignore  CMakeLists.txt  SourceList.cmake  deploy.sh  generate.rb  reinstall.rb  resign-widget.rb
AE/: PlayerTester.aep
AE/assets/layout/default/: PlayerTester_Buffering.layout  PlayerTester_Buffering.timeline  PlayerTester_Button.layout  PlayerTester_Button.timeline  PlayerTester_Capabilities.layout  PlayerTester_Capabilities.timeline  PlayerTester_Component-Regular Text Edit-Btn-Clear.layout  PlayerTester_Component-Regular Text Edit-Btn-Clear.timeline  PlayerTester_Component-Regular Text Edit.layout  PlayerTester_Component-Regular Text Edit.timeline  PlayerTester_Error.layout  PlayerTester_Error.timeline  PlayerTester_ForwardButtons.layout  PlayerTester_ForwardButtons.timeline  PlayerTester_MainComp.layout  PlayerTester_MainComp.timeline  PlayerTester_MaxBitate.layout  PlayerTester_MaxBitate.timeline  PlayerTester_MaxBitrate.layout  PlayerTester_MaxBitrate.timeline  PlayerTester_MaxBufferLength.layout  PlayerTester_MaxBufferLength.timeline  PlayerTester_MinBufferLength.layout  PlayerTester_MinBufferLength.timeline  PlayerTester_ReverseButtons.layout  PlayerTester_ReverseButtons.timeline  PlayerTester_Seek.layout  PlayerTester_Seek.timeline  PlayerTester_SeekControls.layout  PlayerTester_SeekControls.timeline  PlayerTester_SeekTextEdit.layout  PlayerTester_SeekTextEdit.timeline  PlayerTester_StartTime.layout  PlayerTester_StartTime.timeline  PlayerTester_UserAgent.layout  PlayerTester_UserAgent.timeline  PlayerTester_UserAgentTextEdit.layout  PlayerTester_UserAgentTextEdit.timeline  PlayerTester_VideoControls 2.layout  PlayerTester_VideoControls 2.timeline  (+8 more)
Resources/tizen-nacl/web/scripts/: YiPlatformUtilities.js  YiRemoteLogger.js  YiTemp.js  YiVideojsVideoPlayer.js
cmake/Platform/: YiIos.cmake  YiTizenNacl.cmake
src/: AirplayRoutePicker.h  AirplayRoutePicker.mm  IStreamPlanetFairPlayHandler.cpp  IStreamPlanetFairPlayHandler.h  PlayerTesterApp.cpp  PlayerTesterApp.h  PlayerTesterAppFactory.cpp  TestApp.cpp  TestApp.h  YiTizenNaClRemoteLoggerSink.cpp  YiTizenNaClRemoteLoggerSink.h  YiVideojsVideoPlayer.cpp  YiVideojsVideoPlayer.h  YiVideojsVideoPlayerPriv.h  YiVideojsVideoSurface.cpp  YiVideojsVideoSurface.h
